# boundvar

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  boundvar.cabal  boundvar.sln  boundvar.vcxproj  cpp.build.sh  package.yaml  publications.txt  req.dump.txt  stack.yaml
app/: Main.hs
rum/: Cargo.toml
rum/src/: main.rs  um.rs
src/: Um.hs  stack.c  stack.h  um.c  um.cpp  um2.cpp
test/: Spec.hs
